--- a/assets/css/inputs.css
+++ b/assets/css/inputs.css
@@ -1,6 +1,10 @@
 .formulario__input
 {
-    margin-top: 1rem;
     border-radius: 4px;
+    margin-top: 1rem;
     height: 2.5rem;
+    background-color: inherit;
+    border: 0;
+    border-bottom: 2px solid rgba(214, 214, 214, 0.39);
+    outline: 0;
 }
