--- a/assets/css/inputs.css
+++ b/assets/css/inputs.css
@@ -1,24 +1,60 @@
+.formulario__conteiner
+{
+    border: 0;
+    background-color: inherit;
+    border-radius: 4px;
+    color: rgb(100, 100, 100);
+    height: 2.5rem;
+    margin-top: 1.5rem;
+    outline: 0;
+    position: relative;
+}
 .formulario__input
 {
-    border-radius: 4px;
-    margin-top: 1.5rem;
-    height: 2.5rem;
-    background-color: inherit;
-    border: 0;
-    border-bottom: 2px solid rgba(193, 193, 193, 0.65);
+    width: 100%;
     outline: 0;
-    color: rgb(100, 100, 100);
+    border-bottom: 2px solid rgba(193, 193, 193, 0.65);
+    transition: all 0.2s;
+}
+.formulario__input:focus, .formulario__input:valid
+{
+    width: 100%;
+    outline: 0;
+    border-bottom: 2px solid rgba(27, 91, 252, 0.71);
+}
+.formulario__input:focus ~ .formulario__label, .formulario__input:valid ~ .formulario__label
+{
+    transform: translateY(-20px);
+    color: rgba(27, 91, 252, 0.71);
+    font-size: 1rem;
+}
+
+.formulario__label
+{
     font-size: 1.2rem;
+    cursor: text;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    color: rgba(143, 143, 143, 1);
+    transition: all 0.2s;
 }
 
 .formulario__enviar
 {
-    width: 100%;
-    margin-top: 3rem;
-    height: 3rem;
-    border-radius: 4px;
-    font-size: 1.5rem;
     background-color: rgba(27, 91, 252, 0.71);
+    border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     color: white;
+    font-size: 1.5rem;
+    height: 3rem;
+    margin-top: 3rem;
+    width: 100%;
+}
+
+#labelData
+{
+    outline: 0;
+    transform: translateY(-20px);
+    font-size: 1rem;
 }
