Melhoria verificacao email

--- a/assets/css/spanErro.css
+++ b/assets/css/spanErro.css
@@ -17,3 +17,13 @@
 {
     display: block;
 }
+
+.erroEmailInvalido
+{
+    color: red;
+    display: none;
+}
+.mostraErroEmail
+{
+    display: block;
+}
