Comecando a validacao de cpf

--- a/assets/css/spanErro.css
+++ b/assets/css/spanErro.css
@@ -27,3 +27,13 @@
 {
     display: block;
 }
+
+.erroCPFInvalido
+{
+    color: red;
+    display: none; 
+}
+.mostraErroCPF
+{
+    display: block;
+}
